--- a/senate.html
+++ b/senate.html
@@ -105,8 +105,9 @@
                 </tbody>
             </table>
     	</div>
-        <script src="main.js"> </script>
+       
         <script src="/congress_113_senate.js"></script>
-        <script> document.getElementById("senate-data").innerHTML = JSON.stringify(data,null,2); </script>
+         <script src="main.js"> </script>
+<!--        <script> document.getElementById("senate-data").innerHTML = JSON.stringify(data,null,2); </script>-->
 </body>
 </html>
