names now link to appropriate URL and minor streamlining of call logic

--- a/senate.html
+++ b/senate.html
@@ -17,8 +17,8 @@
                 <li>
                     <a href="#">Congress 113</a>
                     <ul>
-                        <li><a href="#">Senate</a></li>
-                        <li><a href="#">House</a></li>
+                        <li><a href="senate.html">Senate</a></li>
+                        <li><a href="house.html">House</a></li>
                     </ul>
                 </li>
             </ul>
@@ -52,9 +52,6 @@
     </div>
 
     <script src="/congress_113_senate.js"></script>
-    <script src="main.js"> </script>
-    <script>
-    </script>
-    <!--        <script> document.getElementById("senate-data").innerHTML = JSON.stringify(data,null,2); </script>-->
+    <script src="/main.js"> </script>
 </body>
 </html>
