--- a/house.html
+++ b/house.html
@@ -2,51 +2,53 @@
 <html lang="en">
 
 <head>
-
+    <link src="assets/stylesheet/gov.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <pre id="house-data"> </pre>
-
-    <nav>
-        <div>
+    <header>
+        <nav>
             <div>
-                <a href="#">TGIF</a>
+                <div>
+                    <a href="index.html">TGIF</a>
+                </div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li>
+                        <a href="#">Congress 113</a>
+                        <ul>
+                            <li><a href="senate.html">Senate</a></li>
+                            <li><a href="house.html">House</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">Congress 113</a>
-                    <ul>
-                        <li><a href="senate.html">Senate</a></li>
-                        <li><a href="house.html">House</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!--Table container-->
+        </nav>
+    </header>
     <div>
         <h2>Congressmen</h2>
         <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
         <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-        <table>
-            <thead>
-                <tr>
-                    <th> Members </th>
-                    <th> Name </th>
-                    <th> Party </th>
-                    <th> State </th>
-                    <th> Seniority </th>
-                    <th> Votes with Party (%) </th>
-                </tr>
-            </thead>
-            <tbody id="tBody">
-                <tr id="tRow"> </tr>
-            </tbody>
-        </table>
     </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th> Members </th>
+                <th> Name </th>
+                <th> Party </th>
+                <th> State </th>
+                <th> Seniority </th>
+                <th> Votes with Party (%) </th>
+            </tr>
+        </thead>
+        <tbody id="tBody">
+            <tr id="tRow"> </tr>
+        </tbody>
+    </table>
     </div>
 
     <script src="/congress_113_house.js"></script>
