--- a/senate.html
+++ b/senate.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
 
+<head>
+    <link src="assets/stylesheet/gov.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <table id="senate-data"> </table>
-
-    <nav>
-        <div>
-            <div>
-                <a href="#">TGIF</a>
-            </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">Congress 113</a>
-                    <ul>
-                        <li><a href="senate.html">Senate</a></li>
-                        <li><a href="house.html">House</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
 
     <header>
         <div>
+            <nav>
+                <div>
+                    <div>
+                        <a href="index.html">TGIF</a>
+                    </div>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li>
+                            <a href="#">Congress 113</a>
+                            <ul>
+                                <li><a href="senate.html">Senate</a></li>
+                                <li><a href="house.html">House</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
-    <!--Table container-->
     <div>
         <h2>Senators</h2>
         <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
-        <table>
-            <thead>
-                <tr>
-                    <th> Members </th>
-                    <th> Name </th>
-                    <th> Party </th>
-                    <th> State </th>
-                    <th> Seniority </th>
-                    <th> Votes with Party (%) </th>
-                </tr>
-            </thead>
-            <tbody id="tBody">
-                <tr id="tRow"> </tr>
-            </tbody>
-        </table>
     </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th> Members </th>
+                <th> Name </th>
+                <th> Party </th>
+                <th> State </th>
+                <th> Seniority </th>
+                <th> Votes with Party (%) </th>
+            </tr>
+        </thead>
+        <tbody id="tBody">
+            <tr id="tRow"> </tr>
+        </tbody>
+    </table>
 
     <script src="/congress_113_senate.js"></script>
     <script src="/main.js"> </script>
 </body>
+
 </html>
