--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <nav>
                 <div>
                     <div>
-                        <a href="#">TGIF</a>
+                        <a href="index.html">TGIF</a>
                     </div>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li>
                             <a href="#">Congress 113</a>
                             <ul>
-                                <li><a href="#">Senate</a></li>
-                                <li><a href="#">House</a></li>
+                                <li><a href="senate.html">Senate</a></li>
+                                <li><a href="house.html">House</a></li>
                             </ul>
                         </li>
                     </ul>
