--- a/house.html
+++ b/house.html
@@ -2,57 +2,72 @@
 <html lang="en">
 
 <head>
-    <link src="assets/stylesheet/gov.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/stylesheet/gov.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div>
-                <div>
-                    <a href="index.html">TGIF</a>
-                </div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
+    <div class="mx-auto" style="width: 60%">
+        <header>
+            <div class="nav d-flex align-items-center">
+                <h1 class="col display-1"> <a href="index.html"> TGIF </a> </h1>
+                <h3 class="justify-content-end"> <a href="mailto:info@tgif.org"> info@tgif.org </a></h3>
+            </div>
+            <div class="navbar bg-dark text-light">
+                <ul class="nav btn-group btn-group-lg" role="group">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html"> Home </a>
+                    </li>
                     <li>
-                        <a href="#">Congress 113</a>
-                        <ul>
-                            <li><a href="senate.html">Senate</a></li>
-                            <li><a href="house.html">House</a></li>
-                        </ul>
+                        <div class="dropdown show">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                113th Congress
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="senate.html">Senate</a>
+                                <a class="dropdown-item" href="house.html">House</a>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
-        </nav>
-    </header>
-    <div>
-        <h2>Congressmen</h2>
-        <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
-        <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
-    </div>
+        </header>
 
-    <table>
-        <thead>
-            <tr>
-                <th> Members </th>
-                <th> Name </th>
-                <th> Party </th>
-                <th> State </th>
-                <th> Seniority </th>
-                <th> Votes with Party (%) </th>
-            </tr>
-        </thead>
-        <tbody id="tBody">
-            <tr id="tRow"> </tr>
-        </tbody>
-    </table>
-    </div>
+
+
+        <div class=col style="height: 50px"> </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div>
+                    <h2 class="text-indent">Senators</h2>
+                    <p class="text-indent">First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
+                    <div class="col-4"> </div>
+                </div>
+            </div>
+            <div class=col style="height: 50px"> </div>
+
+
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr class="border">
+                        <th> Members </th>
+                        <th> Name </th>
+                        <th> Party </th>
+                        <th> State </th>
+                        <th> Seniority </th>
+                        <th> Votes with Party (%) </th>
+                    </tr>
+                </thead>
+                <tbody class="bg-light text-dark" id="tBody">
+                    <tr class="border-bottom" id="tRow"> </tr>
+                </tbody>
+            </table>
 
     <script src="/congress_113_house.js"></script>
     <script src="main.js"> </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
