--- a/senate.html
+++ b/senate.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-    <div>
-        <header class="mx-auto" style="width: 60%">
+    <div class="mx-auto" style="width: 60%">
+        <header>
             <div class="nav d-flex align-items-center">
                 <h1 class="col display-1"> <a href="index.html"> TGIF </a> </h1>
-                <h3 class="justify-content-end"> inf@tgif.com </p>
+                <h3 class="justify-content-end"> <a href="mailto:info@tgif.org"> info@tgif.org </a></h3>
             </div>
-            <div class ="bg-dark text-light">
-                <ul class="nav">
+            <div class="navbar bg-dark text-light">
+                <ul class="nav btn-group btn-group-lg" role="group">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"> Home </a>
+                        <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
                     <li>
                         <div class="dropdown show">
@@ -38,16 +38,18 @@
         <div class=col style="height: 50px"> </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="mx-auto" style="width: 60%">
-                    <h2>Senators</h2>
-                    <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
+                <div>
+                    <h2 class="text-indent">Senators</h2>
+                    <p class="text-indent">First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
                     <div class="col-4"> </div>
                 </div>
             </div>
+            <div class=col style="height: 50px"> </div>
 
-            <table class="container-fluid mx-auto" style="width: 60%">
-                <thead>
-                    <tr>
+
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr class="border">
                         <th> Members </th>
                         <th> Name </th>
                         <th> Party </th>
@@ -56,8 +58,8 @@
                         <th> Votes with Party (%) </th>
                     </tr>
                 </thead>
-                <tbody id="tBody">
-                    <tr id="tRow"> </tr>
+                <tbody class="bg-light text-dark" id="tBody">
+                    <tr class="border-bottom" id="tRow"> </tr>
                 </tbody>
             </table>
 
