added images on all the pages, a header logo, and fixed some variable spacing

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-    <div class="mx-auto" style="width: 60%">
+    <div class="mx-auto mb-3" style="width: 60%">
         <header>
-            <div class="nav d-flex align-items-center">
-                <h1 class="col display-1"> <a href="index.html"> TGIF </a> </h1>
-                <h3 class="justify-content-end"> <a href="mailto:info@tgif.org"> info@tgif.org </a></h3>
+            <div class="nav d-flex">
+                <div class ="d-flex justify-content-between align-items-center">
+                    <img class="image-fluid" src="/assets/images/logo.jpg"> 
+                    <a href="mailto:info@tgif.org"> info@tgif.org </a>
+                </div>
             </div>
             <div class="navbar bg-dark text-light">
-                <ul class="nav btn-group btn-group-lg" role="group">
+                <ul class="nav btn-group btn-group-lg mx-auto" role="group">
                     <li class="nav-item">
                         <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
@@ -34,13 +36,17 @@
         </header>
 
         <div>
-            <div class=col style="height: 50px"> </div>
+            <div class=col style="height: 30px"> </div>
+            <img src="/assets/images/architecture-building-capitol-616852.jpg" class="img-fluid" alt="DC">
+            <div class=col style="height: 30px"> </div>
             <h2>About Us</h2>
             <p>Openness, accountability, and honesty define government transparency. In a free society, transparency is government's obligation to share information with citizens. It is at the heart of how citizens hold their public officials accountable. Here at TGIF we believe that government should be transparent.</p>
             <p>Governments exist to serve the people. Information on how officials conduct the public business and spend taxpayer money must be readily available and easily understood. This transparency allows good and just governance. Transparency promotes accountability and provides information for citizens about what their Government is doing.</p>
             <p>We also believe that government should be participatory. Public engagement enhances the Government's effectiveness and improves the quality of its decisions. Knowledge is widely dispersed in society, and public officials benefit from having access to that dispersed knowledge. We invite you to use our site to become actively engaged in American government.</p>
             <p>TGIF works to disclose information in forms that the public can readily find and use. We solicit public feedback to identify information of greatest use to the public.</p>
-            <div class=col style="height: 50px"> </div>
+            <div class=col style="height: 30px"> </div>
+            <img src="/assets/images/pexels-photo-532820.jpeg" class="img-fluid" alt="DC">
+            <div class=col style="height: 30px"> </div>
             <h3>Background History of Government Transparency</h3>
             <p>In the West, the idea that government should be open to public scrutiny and susceptible to public opinion dates back at least to the time of the Enlightenment, when many philosophes made an attack on absolutist doctrine of state secrecy, a core part of their intellectual project. The passage of formal legislative instruments to this end can also be traced to this time with Sweden, for example, (which then included Finland as a Swedish-governed territory) enacting free press legislation as part of its constitution (Freedom of the Press Act, 1766). This approach, and that of the philosophes more broadly, is strongly related to recent historiography on the eighteenth-century public sphere.
 
@@ -50,6 +56,11 @@
 
                 <p>The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.</p>
         </div>
+
+        <script src="main.js"> </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
