--- a/senate.html
+++ b/senate.html
@@ -34,8 +34,9 @@
         </header>
 
 
-
-        <div class=col style="height: 50px"> </div>
+        <div class=col style="height: 30px"> </div>
+        <img src="/assets/images/architecture-attractions-building-208702.jpg" class="img-fluid" alt="DC">
+        <div class=col style="height: 30px"> </div>
         <div class="container-fluid">
             <div class="row">
                 <div>
@@ -44,7 +45,7 @@
                     <div class="col-4"> </div>
                 </div>
             </div>
-            <div class=col style="height: 50px"> </div>
+            <div class=col style="height: 30px"> </div>
 
 
             <table class="table table-hover">
