--- a/house.html
+++ b/house.html
@@ -9,12 +9,14 @@
 <body>
     <div class="mx-auto" style="width: 60%">
         <header>
-            <div class="nav d-flex align-items-center">
-                <h1 class="col display-1"> <a href="index.html"> TGIF </a> </h1>
-                <h3 class="justify-content-end"> <a href="mailto:info@tgif.org"> info@tgif.org </a></h3>
+            <div>
+                <div class="d-flex justify-content-between align-items-center container-fluid">
+                    <img class="img-fluid" src="/assets/images/logo.jpg">
+                    <a class="container-fluid" href="mailto:info@tgif.org"> info@tgif.org </a>
+                </div>
             </div>
             <div class="navbar bg-dark text-light">
-                <ul class="nav btn-group btn-group-lg" role="group">
+                <ul class="nav btn-group btn-group-lg mx-auto" role="group">
                     <li class="nav-item">
                         <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
