--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <div class="mx-auto mb-3" style="width: 60%">
+    <div class="mx-auto" style="width: 60%">
         <header>
-            <div class="nav d-flex">
-                <div class ="d-flex justify-content-between align-items-center">
-                    <img class="image-fluid" src="/assets/images/logo.jpg"> 
-                    <a href="mailto:info@tgif.org"> info@tgif.org </a>
+            <div>
+                <div class="d-flex justify-content-between align-items-center container-fluid">
+                    <img class="img-fluid" src="/assets/images/logo.jpg">
+                    <a class="container-fluid" href="mailto:info@tgif.org"> info@tgif.org </a>
                 </div>
             </div>
             <div class="navbar bg-dark text-light">
