added a footer to all the pages and removed vestigial function from js file

--- a/house.html
+++ b/house.html
@@ -13,7 +13,7 @@
                 <div class="d-flex justify-content-between align-items-center container-fluid">
                     <img class="img-fluid" src="/assets/images/logo.jpg" href="index.html">
                     <div>
-                        <img  style ="height: 50px" style="width: 50px" src="assets/images/email-logo.png" href="mailto:info@tgif.org">
+                        <img style="height: 50px" style="width: 50px" src="assets/images/email-logo.png" href="mailto:info@tgif.org">
                         <a href="mailto:info@tgif.org"> info@tgif.org </a>
                     </div>
                 </div>
@@ -66,6 +66,12 @@
                 <tr class="border-bottom" id="tRow"> </tr>
             </tbody>
         </table>
+
+        <footer class="mt-5">
+            <div class="d-flex justify-content-center">
+                <p> &copy;2019 Transparent Government in Fact | TGIF </p>
+            </div>
+        </footer>
 
         <script src="/congress_113_house.js"></script>
         <script src="main.js"> </script>
