--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
                 </div>
             </div>
         </div>
-
-
-
-        <div class=col style="height: 30px"> </div>
-
-        <div class=col style="height: 30px"> </div>
+        <footer class="mt-5">
+            <div class="d-flex justify-content-center">
+                <p> &copy;2019 Transparent Government in Fact | TGIF </p>
+            </div>
+        </footer>
     </div>
 
     <script src="main.js"> </script>
