--- a/senate.html
+++ b/senate.html
@@ -13,7 +13,7 @@
                 <div class="d-flex justify-content-between align-items-center container-fluid">
                     <img class="img-fluid" src="/assets/images/logo.jpg" href="index.html">
                     <div>
-                        <img  style ="height: 50px" style="width: 50px" src="assets/images/email-logo.png" href="mailto:info@tgif.org">
+                        <img style="height: 50px" style="width: 50px" src="assets/images/email-logo.png" href="mailto:info@tgif.org">
                         <a href="mailto:info@tgif.org"> info@tgif.org </a>
                     </div>
                 </div>
@@ -69,12 +69,19 @@
                 </tbody>
             </table>
 
-            <script src="/congress_113_senate.js"></script>
-            <script src="/main.js"> </script>
-            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <footer class="mt-5">
+                <div class="d-flex justify-content-center">
+                    <p> &copy;2019 Transparent Government in Fact | TGIF </p>
+                </div>
+            </footer>
         </div>
+
+        <script src="/congress_113_senate.js"></script>
+        <script src="/main.js"> </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
