added in HTML filters for party/state and created onchange status for checkboxes to generate an array

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col" style="height: 30px"> </div>
             <div>
                 <p class="d-flex justify-content-center">
-                    <button class="btn btn-primary btn-dark" type="button" data-toggle="collapse" data-target="#multiCollapse">History of Government Transparency</button>
+                    <button class="btn btn-primary btn-dark" type="button" data-toggle="collapse" data-target="#multiCollapse"> Tell Me More </button>
                 </p>
             </div>
         </div>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <footer class="mt-5">
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center text-light bg-dark">
                 <p> &copy;2019 Transparent Government in Fact | TGIF </p>
             </div>
         </footer>
