created a function that receives value when checkbox is interacted with, to soon be used with JSON table creation

--- a/senate.html
+++ b/senate.html
@@ -63,12 +63,12 @@
                 <option value="Marjorie"> </option>
                 <option value="Greenbay"> </option>
                 <option value="North"> </option>
-                <option value="South"> </option>
-                <option value="Yeager"> </option>
+                <option value=""> </option>
+                <option value=""> </option>
             </select>
         </div>
         <div class=col style="height: 30px"> </div>
-        <table class="table table-hover">
+        <table class="table table-hover" id="table">
             <thead class="thead-dark">
                 <tr class="border">
                     <th> Members </th>
