--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="mx-auto" style="width: 60%">
+    <div class="mx-auto" style="width: 70%">
         <header>
             <div>
                 <div class="d-flex justify-content-between align-items-center container-fluid">
@@ -18,19 +18,37 @@
                     </div>
                 </div>
             </div>
-            <div class="navbar bg-dark text-light">
-                <ul class="nav btn-group btn-group-lg mx-auto" role="group">
+            <div class="navbar bg-dark text-light d-flex justify-content-around">
+                <ul class="nav btn-group btn-group-lg" role="group">
                     <li class="nav-item">
                         <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
-                    <li>
+                    <li class="d-flex">
                         <div class="dropdown show">
-                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="members" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 113th Congress
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-menu" aria-labelledby="members">
                                 <a class="dropdown-item" href="senate.html">Senate</a>
                                 <a class="dropdown-item" href="house.html">House</a>
+                            </div>
+                        </div>
+                        <div class="dropdown show">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="attendance" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Attendance
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="attendance">
+                                <a class="dropdown-item" href="senate_attendance.html">Senate</a>
+                                <a class="dropdown-item" href="house_attendance.html">House</a>
+                            </div>
+                        </div>
+                        <div class="dropdown show">
+                            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="loyalty" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Party Loyalty
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="loyalty">
+                                <a class="dropdown-item" href="senate_loyalty.html">Senate</a>
+                                <a class="dropdown-item" href="house_loyalty.html">House</a>
                             </div>
                         </div>
                     </li>
@@ -51,7 +69,7 @@
             <div class="col" style="height: 30px"> </div>
             <div>
                 <p class="d-flex justify-content-center">
-                    <button class="btn btn-primary btn-dark" type="button" data-toggle="collapse" data-target="#multiCollapse"> Tell Me More </button>
+                    <button class="btn btn-primary btn-dark" style="width: 35%" type="button" data-toggle="collapse" data-target="#multiCollapse"> Tell Me More </button>
                 </p>
             </div>
         </div>
