fixed base attendance table to display properly and have added statistics/table displays for most engaged members of the house

--- a/house_attendance.html
+++ b/house_attendance.html
@@ -71,16 +71,67 @@
             </div>
         </div>
         <div class=col style="height: 30px"> </div>
+        <h2> The House at a Glance </h2>
         <table class="table table-hover" id="tableTop">
             <thead class="thead-dark">
                 <tr class="border">
                     <th> Party </th>
                     <th> Num. of Representatives </th>
-                    <th> Votes with Party (%) </th>
+                    <th> Votes with Party &#40;%&#41; </th>
                 </tr>
             </thead>
             <tbody class="bg-light text-dark" id="glanceBody">
                 <tr class="border-bottom" id="glanceRow"> </tr>
+            </tbody>
+        </table>
+
+        <div class=col style="height: 30px"> </div>
+        <h2> Least Engaged &#40;Bottom 10% Attendance Rate&#41; </h2>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            </thead>
+            <tbody class="bg-light text-dark" id="leastAttendBody">
+                <tr class="border-bottom" id="leastAttendRow"> </tr>
+            </tbody>
+        </table>
+
+        <div class=col style="height: 30px"> </div>
+        <h2> Most Engaged &#40;Top 10% Attendance Rate&#41; - Democrats </h2>
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41;</th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            </thead>
+            <tbody class="bg-light text-dark" id="mostAttendBodyDem">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+        </table>
+         <div class=col style="height: 30px"> </div>
+        <h3> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Republicans </h3>       
+        <table class="table table-hover" id="tableTop">
+            <thead class="thead-dark">
+                <tr class="border">
+                    <th> Name </th>
+                    <th> State </th>
+                    <th> Seniority &#40;Years&#41; </th>
+                    <th> Num. of Missed Votes </th>
+                    <th> Missed &#40;%&#41; </th>
+                </tr>
+            <tbody class="bg-light text-dark" id="mostAttendBodyRep">
+                <tr class="border-bottom"> </tr>
+            </tbody>
+            <tbody class="bg-light text-dark" id="mostAttendBodyInd">
+                <tr class="border-bottom"> </tr>
             </tbody>
         </table>
 
@@ -98,6 +149,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
         glanceTable(allMembers)
+    </script>
+    <script>
+        topAttendTableDem();
+        topAttendTableRep();
+        topAttendTableInd();
     </script>
 </body>
 
