fixed a spacing issue for all nav menu items, excluding those on the loyalty pages

--- a/house.html
+++ b/house.html
@@ -20,11 +20,11 @@
             </div>
             <div class="navbar bg-dark text-light d-flex justify-content-around">
                 <ul class="nav btn-group btn-group-lg" role="group">
-                    <li class="nav-item">
+                    <li class="nav-item px-5">
                         <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
                     <li class="d-flex">
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="members" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 113th Congress
                             </a>
@@ -33,7 +33,7 @@
                                 <a class="dropdown-item" href="house.html">House</a>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="attendance" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Attendance
                             </a>
@@ -42,7 +42,7 @@
                                 <a class="dropdown-item" href="house_attendance.html">House</a>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="loyalty" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Party Loyalty
                             </a>
