--- a/house_attendance.html
+++ b/house_attendance.html
@@ -20,11 +20,11 @@
             </div>
             <div class="navbar bg-dark text-light d-flex justify-content-around">
                 <ul class="nav btn-group btn-group-lg" role="group">
-                    <li class="nav-item">
+                    <li class="nav-item px-5">
                         <a class="nav-link text-white" href="index.html"> Home </a>
                     </li>
                     <li class="d-flex">
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="members" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 113th Congress
                             </a>
@@ -33,16 +33,16 @@
                                 <a class="dropdown-item" href="house.html">House</a>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="attendance" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Attendance
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="attendance">
+                            <div class="dropdown-menu px-5" aria-labelledby="attendance">
                                 <a class="dropdown-item" href="senate_attendance.html">Senate</a>
                                 <a class="dropdown-item" href="house_attendance.html">House</a>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown show px-5">
                             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="loyalty" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Party Loyalty
                             </a>
@@ -56,14 +56,11 @@
             </div>
         </header>
 
-
-        <div class=col style="height: 30px"> </div>
+        <h1 class="text-indent py-3" style="text-align: center"> Attendance in the House of Representatives </h1>
         <img src="/assets/images/architecture-attractions-building-208702.jpg" class="img-fluid" alt="DC">
-        <div class=col style="height: 30px"> </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="border-bottom py-3">
-                    <h2 class="text-indent" style="text-align: center"> Attendance in the House of Representatives </h2>
                     <p class="text-indent">The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
                     <p> The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
                     <div class="col-4"> </div>
@@ -315,6 +312,7 @@
         leastAttendTableDem();
         leastAttendTableRep();
         leastAttendTableInd();
+
     </script>
 </body>
 
